src/script_k8s/fe/ingress-ng-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: demoportal
  name: ingress-demoportal-fe
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "60"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:444170698423:certificate/3eea5a83-c2b4-4d4e-814c-44333c1a6976
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: demoportal-be-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demoportal-fe-service
                port:
                  number: 80
